Fixing double border

--- a/css/blog.css
+++ b/css/blog.css
@@ -140,7 +140,7 @@ h2 {
 }
 
 .post {
-    width: 98%;
+    width: 97%;
     height: 25%;
     border: 1px #dedede solid;
     flex-shrink: 0;
